Bug 421450 - double-click on titlebar does not maximize windows
Summary: double-click on titlebar does not maximize windows
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.18.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 345473 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-05-13 08:26 UTC by slartibart70
Modified: 2023-12-26 12:13 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description slartibart70 2020-05-13 08:26:19 UTC
I'm using fedora fc31 with plasma 5.18.5/kf5 5.70

Independent on the settings of systemsettings5 > window management > window behavior > titlebar actions > double-click,
the window does not maximize/minimize/shade (whatever) on a double-click inside the title-bar

Instead, the behavior is similar to the 'move window' action (e.g. like clicking Alt+primary mouse key and moving the mouse) 

Double-clicking is indeed working properly inside of windows (e.g. selecting text), so i assume this to be a glitch/bug..?
Comment 1 slartibart70 2020-05-21 15:48:01 UTC
some more information:
this happens only by changing the 'animation speed' in systemsettings5 > workspace behavior > general behavior

(after logoff/login all is fine again, double-clicking on titlebar works as expected. Change the slider setttings - and double click is gone)
Comment 2 zeev 2020-09-03 14:33:51 UTC
Same with freshly installed Fedora 32
Comment 3 David Edmundson 2020-09-14 21:57:53 UTC
QApplication::startDragTime() is getting broken
Comment 4 Bug Janitor Service 2020-09-14 22:01:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-integration/-/merge_requests/5
Comment 5 David Edmundson 2020-09-15 08:29:21 UTC
Git commit 857ee264e62e68dfa7c5ce7086dc6fc4195234a5 by David Edmundson.
Committed on 14/09/2020 at 22:00.
Pushed by davidedmundson into branch 'master'.

Use same default for all places StartDragTime is loaded

On startup we call:

m_hints[QPlatformTheme::StartDragTime] = readConfigValue(cg,
QStringLiteral("StartDragTime"), 500);

on reload we call int startDragTime = cg.readEntry("StartDragTime", 10);

if the startup time isn't set, then if a reload is triggered then it is
reset to a bogus value.

Long term this clearly needs porting to KConfigXT

M  +1    -1    src/platformtheme/khintssettings.cpp

https://invent.kde.org/plasma/plasma-integration/commit/857ee264e62e68dfa7c5ce7086dc6fc4195234a5
Comment 6 Patrick Silva 2021-06-11 18:36:24 UTC
*** Bug 345473 has been marked as a duplicate of this bug. ***
Comment 7 Aaron Cottle 2023-12-26 12:13:06 UTC
Oops sorry about the spam everyone I got very confused with bugzilla's interface and then fatfingered the enter key and commited a bunch of stupid changes to a necro'd resolved bug which I have just reverted much apologies.