Use same default for all places StartDragTime is loaded

On startup we call:

m_hints[QPlatformTheme::StartDragTime] = readConfigValue(cg,
QStringLiteral("StartDragTime"), 500);

on reload we call int startDragTime = cg.readEntry("StartDragTime", 10);

if the startup time isn't set, then if a reload is triggered then it is
reset to a bogus value.

Long term this clearly needs porting to KConfigXT

BUG: 421450